Fix cards being 1px too short when autoheight

--- a/src/renderer/components/TextContent.css
+++ b/src/renderer/components/TextContent.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  min-height: calc(var(--cellSize) * 2);
+  min-height: calc(var(--cellSize) * 2 + 1px);
   outline: 0;
   box-sizing: border-box;
   overflow: auto;
